3ano/2-Semestre/LFA/bloco2/b2_01/Hello.g4
grammar Hello ; 

options { caseInsensitive = true; }
// Regra principal: aceita qualquer uma das opções repetidamente
program : (stat)* EOF ;

stat : greetings 
     | bye 
     ;

greetings : 'hello' ID ;
bye       : 'bye' ID ;

ID : [a-z]+ ;
WS : [ \t\r\n]+ -> skip ;
